<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- ============================ -->
    <!-- Projeto pai do Spring Boot -->
    <!-- Gerencia versões de dependências e configurações padrão do projeto -->
    <!-- ============================ -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>

    <!-- ============================ -->
    <!-- Identificação do projeto -->
    <!-- ============================ -->
    <groupId>br.edu.ifba</groupId>
    <artifactId>emprestimos-ms</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name />
    <description />
    <url />

    <licenses>
        <license />
    </licenses>

    <developers>
        <developer />
    </developers>

    <scm>
        <connection />
        <developerConnection />
        <tag />
        <url />
    </scm>

    <!-- ============================ -->
    <!-- Propriedades do projeto -->
    <!-- Define as versões do Java e do Spring Cloud -->
    <!-- ============================ -->
    <properties>
        <java.version>21</java.version>
        <spring-cloud.version>2025.0.3</spring-cloud.version>
    </properties>

    <dependencies>

        <!-- ============================ -->
        <!-- Spring Boot Web -->
        <!-- Cria APIs REST, controllers, endpoints HTTP, JSON e servidor embutido -->
        <!-- ============================ -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- ============================ -->
        <!-- Spring Data JPA -->
        <!-- Permite usar entidades JPA, repositories e persistência com Hibernate -->
        <!-- ============================ -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- ============================ -->
        <!-- PostgreSQL Driver -->
        <!-- Permite conectar a aplicação ao banco de dados PostgreSQL -->
        <!-- O escopo runtime indica que o driver é necessário durante a execução -->
        <!-- ============================ -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- ============================ -->
        <!-- Validation -->
        <!-- Permite usar validações como @Valid, @NotNull, @NotBlank e @Email -->
        <!-- ============================ -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- ============================ -->
        <!-- Java Mail Sender -->
        <!-- Permite enviar e-mails pela aplicação -->
        <!-- ============================ -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>

        <!-- ============================ -->
        <!-- Springdoc OpenAPI / Swagger -->
        <!-- Gera documentação interativa da API com Swagger UI -->
        <!-- ============================ -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.8.16</version>
        </dependency>

        <!-- ============================ -->
        <!-- OpenFeign -->
        <!-- Permite que um microsserviço chame outro por interfaces Java -->
        <!-- ============================ -->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-openfeign</artifactId>
        </dependency>

        <!-- ============================ -->
        <!-- Spring Boot DevTools -->
        <!-- Fornece recursos de desenvolvimento, como reinicialização automática -->
        <!-- É carregado somente durante a execução e não é transitivo -->
        <!-- ============================ -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <!-- ============================ -->
        <!-- Spring Boot Test -->
        <!-- Fornece suporte para testes automatizados com Spring Boot -->
        <!-- ============================ -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- ============================ -->
        <!-- Spring AMQP / RabbitMQ -->
        <!-- Permite publicar e consumir mensagens utilizando RabbitMQ -->
        <!-- ============================ -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-amqp</artifactId>
        </dependency>

        <!-- ============================ -->
        <!-- Spring Dotenv -->
        <!-- Permite carregar variáveis de ambiente a partir de arquivo .env -->
        <!-- ============================ -->
        <dependency>
            <groupId>me.paulschwarz</groupId>
            <artifactId>spring-dotenv</artifactId>
            <version>5.1.0</version>
        </dependency>

    </dependencies>

    <!-- ============================ -->
    <!-- Gerenciamento de dependências -->
    <!-- Centraliza as versões das dependências do Spring Cloud -->
    <!-- ============================ -->
    <dependencyManagement>
        <dependencies>

            <!-- ============================ -->
            <!-- Spring Cloud BOM -->
            <!-- Gerencia versões compatíveis das dependências Spring Cloud -->
            <!-- ============================ -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <!-- ============================ -->
    <!-- Configurações de build -->
    <!-- ============================ -->
    <build>
        <plugins>

            <!-- ============================ -->
            <!-- Spring Boot Maven Plugin -->
            <!-- Permite empacotar e executar a aplicação Spring Boot -->
            <!-- ============================ -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

        </plugins>
    </build>

</project>